--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Bolognese</h1>
-    
+    <img src="images/bolognese.jpeg" alt="Bolognese" width="200" height="200">
 </body>
 </html>
