Added the recipe for bolognese

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -9,5 +9,26 @@
 <body>
     <h1>Bolognese</h1>
     <img src="images/bolognese.jpeg" alt="Bolognese" width="200" height="200">
+    <p>This recipe is via the Bon Appetit website. It's super tasty</p>
+    <ul>
+        <li>1 medium onion, chopped</li>
+        <li>1 celery stalk, chopped</li>
+        <li>1 small carrot, peeled, chopped</li>
+        <li>3 tbsp. extra virgin olive oil</li>
+        <li>1 lb, ground beef chuck (20% fat), patted dry</li>
+        <li>Kosher salt</li>
+        <li>3 oz. thinly sliced pancetta, finely chopped</li>
+        <li>1 cup dry white wine</li>
+        <li>1/2 cup tomato paste</li>
+        <li>1 bay leaf</li>
+        <li>pinch of finely grated nutmeg</li>
+        <li>2 cups (or more) homemade chicken stock or low sodium chicken broth</li>
+        <li>1 cup whole milk</li>
+        <li>1 lb fresh tagliatelle or pappardelle, or dry rigatoni</li>
+        <li>2 oz finely grated parmesan, plus more for serving</li>
+    </ul>
+
+    <p>Hope you enjoy</p>
+
 </body>
 </html>
