--- a/smashburger.html
+++ b/smashburger.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Odin Project Recipes</title>
+    <title>Smash Burger Recipe</title>
+    
+    <h1>Smash Burger</h1>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/bolognese.html">Bolognese</a>
-    <a href="recipes/smashburger.html">Smash Burger</a>
+    
 </body>
 </html>
