Added recipe and ingredients for Smash Burger

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -7,6 +7,7 @@
     <title>Bolognese Recipes</title>
 </head>
 <body>
+    <a href="/index.html">Home</a>
     <h1>Bolognese</h1>
     <img src="images/bolognese.jpeg" alt="Bolognese" width="200" height="200">
     <p>This recipe is via the Bon Appetit website. It's super tasty</p>
@@ -46,6 +47,8 @@
         <br>
         <li>Transfer pasta to a platter and top with more Parmesan.</li>
     </ol>
+
+    
 
 </body>
 </html>
