Changed formatting and added CSS for styling

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Odin Project Recipes</title>
+    <link rel="stylesheet" href="recipes/style.css">
 </head>
 <body>
+    
     <h1>Odin Recipes</h1>
     <a href="recipes/bolognese.html">Bolognese</a>
     <br>
     <a href="recipes/smashburger.html">Smash Burger</a>
     <br>
     <a href="recipes/cacioepepe.html">Cacio E Pepe</a>
-</body>
+    
+
+</div>
 </html>
