Added index html to recipe folder

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -11,11 +11,11 @@
 <body>
     
     <h1>Odin Recipes</h1>
-    <a href="recipes/bolognese.html">Bolognese</a>
+    <a href="bolognese.html">Bolognese</a>
     <br>
-    <a href="recipes/smashburger.html">Smash Burger</a>
+    <a href="smashburger.html">Smash Burger</a>
     <br>
-    <a href="recipes/cacioepepe.html">Cacio E Pepe</a>
+    <a href="cacioepepe.html">Cacio E Pepe</a>
     
 
 </div>
