--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -11,7 +11,7 @@
 <body>
     <div id="bolo">
 
-    <a href="/index.html">Home</a>
+        <a href="index.html">Home</a>
     
     <h1>Bolognese</h1>
     
