--- a/recipes/smashburger.html
+++ b/recipes/smashburger.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="recipes/style.css">
 </head>
 <body>
-    <a href="/index.html">Home</a>
+    <a href="index.html">Home</a>
     
     <h1>Smash Burger</h1>
     
