--- a/recipes/index.html
+++ b/recipes/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Odin Project Recipes</title>
-    <link rel="stylesheet" href="recipes/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     
     <h1>Odin Recipes</h1>
+    <img src="images/oldchef.jpeg" alt="Old Chef">
+    <br>
     <a href="bolognese.html">Bolognese</a>
     <br>
     <a href="smashburger.html">Smash Burger</a>
